# Cpp-constexpr

./: CMakeLists.txt  README.md  bakery.h  cake.h  pie.h  test.sh
tresc_zadania/: bakery_example.cc
